# uv-pytorch-dep-bug-repro

./: README.md
projects/app/: pyproject.toml
projects/lib/: pyproject.toml
