[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = []

[project.optional-dependencies]
torch-v1 = [
    "torch==1.12.1",
    "torchaudio==0.12.1",
    "lib[torch-v1]",
]
torch-v2 = [
    "torch~=2.3.1",
    "torchaudio~=2.3.1",
    "lib[torch-v2]",
]

[tool.uv]
conflicts = [
    [
      { extra = "torch-v1" },
      { extra = "torch-v2" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121/"
explicit = true

[tool.uv.sources]
lib = { path = "../lib", editable = true }
torch = [
  { index = "pytorch-cu113", extra = "torch-v1", marker = "platform_system != 'Darwin'"},
  { index = "pytorch-cu121", extra = "torch-v2", marker = "platform_system != 'Darwin'"},
]
torchaudio = [
  { index = "pytorch-cu113", extra = "torch-v1", marker = "platform_system != 'Darwin'"},
  { index = "pytorch-cu121", extra = "torch-v2", marker = "platform_system != 'Darwin'"},
]
