[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = []

[project.optional-dependencies]
torch-v1 = [
    "lib[torch-v1]",
]
torch-v2 = [
    "lib[torch-v2]",
]

[tool.uv]
conflicts = [
    [
      { extra = "torch-v1" },
      { extra = "torch-v2" },
    ],
]
[tool.uv.sources]
lib = { path = "../lib", editable = true }
